# -Markdown-Editor-App

./: LICENSE  README.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  setupTests.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: init.sql
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: AdvancedMarkdownEditor.tsx  Editor.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  MarkdownWorkspace.tsx  NewProjectDialog.tsx  NoteTitle.tsx  ProfileManager.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  SplitView.tsx  TabManager.tsx  TagManager.tsx  TaskManager.tsx  WorkspaceManager.tsx
src/components/__tests__/: MarkdownEditor.test.tsx  Sidebar.test.tsx  SplitView.test.tsx  TaskManager.test.tsx  WorkspaceManager.test.tsx
src/contexts/: ProjectContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
src/services/: DatabaseService.ts
src/theme/: gruvbox.ts  theme.ts  themeManager.ts
